--- a/negocio8/style.css
+++ b/negocio8/style.css
@@ -1,3 +1,9 @@
+// @autor: Esteban Perez Castillo 
+//   @versión: Css3
+//  @objetivos del archivo: Crear y modificar diferentes tipos de estilos para el proyecto.
+//
+
+
 h2 {
   font-family: Monospace;
   color: #f9f7cf;
